[package]
name = "fuzzy-datetime"
repository = "https://github.com/neilg63/fuzzy-datetime"
version = "0.1.0"
edition = "2021"
categories = ["data-structures", "parsing", "text-processing"]
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

[dependencies]
chrono = "^0.4.39"
simple-string-patterns = "^0.3.16"
