[package]
name = "fuzzy-datetime"
description = "Detects, completes and normalises fuzzy date and date-time strings for interoperability with chrono or direct output as ISO-8601-compatible strings"
repository = "https://github.com/neilg63/fuzzy-datetime"
version = "0.1.4"
edition = "2021"
categories = ["data-structures", "parsing", "text-processing"]
license = "MIT"

[dependencies]
chrono = "0.4"
simple-string-patterns = "0.4"
to_segments = "0.1"
